...
import com.stripe.android.identity.networking.models.Requirement
import com.stripe.android.identity.viewmodel.IdentityViewModel
import com.stripe.android.uicore.text.dimensionResourceSp
import com.stripe.android.uicore.utils.collectAsState
import kotlinx.coroutines.launch

internal const val FRONT_ROW_TAG = "frontRow"
internal const val BACK_ROW_TAG = "backRow"
internal const val UPLOAD_SCREEN_CONTINUE_BUTTON_TAG = "uploadScreenContinueButton"
internal const val SHOULD_SHOW_TAKE_PHOTO_TAG = "shouldShowTakePhoto"
internal const val SHOULD_SHOW_CHOOSE_PHOTO_TAG = "shouldShowChoosePhoto"

internal enum class UploadMethod {
    TAKE_PHOTO, CHOOSE_PHOTO
}

@Composable
...
