...
  <string name="stripe_paymentsheet_address_element_discard_changes_body">Your address changes won\'t be saved.</string>
  <!-- Destructive action for the dialog shown when closing Address Element with unsaved changes. -->
  <string name="stripe_paymentsheet_address_element_discard_changes_confirm">Discard</string>
  <!-- Title for the dialog shown when closing Address Element with unsaved changes. -->
  <string name="stripe_paymentsheet_address_element_discard_changes_title">Discard changes?</string>
  <!-- Title for a button that when pressed saves the provided address. -->
  <string name="stripe_paymentsheet_address_element_primary_button">Save address</string>
  <!-- Title for shipping address entry section -->
  <string name="stripe_paymentsheet_address_element_shipping_address">Shipping Address</string>
  <!-- Label for a checkbox when pressed used the provided billing address details as shipping address -->
  <string name="stripe_paymentsheet_address_element_use_billing_as_shipping">Use billing address for shipping</string>
  <!-- Message shown as part of overall Bacs mandate indicating when an email will be sent within three days after confirming payment -->
  <string name="stripe_paymentsheet_bacs_email_mandate">An email will be sent to %s within three business days to confirm the setup of this debit instruction.</string>
...
  <string name="stripe_paymentsheet_close">Close</string>
  <!-- A button used to confirm selecting a saved payment method -->
  <string name="stripe_paymentsheet_confirm">Confirm</string>
  <!-- Title for prompting for a card's CVC on confirming the payment -->
  <string name="stripe_paymentsheet_confirm_your_cvc">Confirm your CVC</string>
  <!-- Text for a button that allows manual entry of an address -->
  <string name="stripe_paymentsheet_enter_address_manually">Enter address manually</string>
  <!-- Title shown above a view containing a customer's bank account that they can delete or update -->
  <string name="stripe_paymentsheet_manage_bank_account">Manage US bank account</string>
  <!-- Title shown above a view containing a customer's card payment methods that they can delete or update -->
  <string name="stripe_paymentsheet_manage_card">Manage card</string>
  <!-- Title shown above a view containing the customer's cards that they can delete or update -->
  <string name="stripe_paymentsheet_manage_cards">Manage cards</string>
...
